// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`render() > renders ReturnNode / BreakNode / ExitNode as notched rectangles 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 34" width="600" height="34">
<rect width="100%" height="100%" fill="#ffffff"/>
<polygon points="0,0 600,0 600,24 590,34 10,34 0,24" fill="#fce4ec" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">return result</text>
</svg>"
`;

exports[`render() > renders ReturnNode / BreakNode / ExitNode as notched rectangles 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 34" width="600" height="34">
<rect width="100%" height="100%" fill="#ffffff"/>
<polygon points="0,0 600,0 600,24 590,34 10,34 0,24" fill="#fce4ec" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">break</text>
</svg>"
`;

exports[`render() > renders ReturnNode / BreakNode / ExitNode as notched rectangles 3`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 34" width="600" height="34">
<rect width="100%" height="100%" fill="#ffffff"/>
<polygon points="0,0 600,0 600,24 590,34 10,34 0,24" fill="#fce4ec" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">exit</text>
</svg>"
`;

exports[`render() > renders a CallNode with double vertical bars on both sides 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 34" width="600" height="34">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#e8f5e9" stroke="#333333" stroke-width="1"/>
<line x1="6" y1="0" x2="6" y2="34" stroke="#333333" stroke-width="1"/>
<line x1="594" y1="0" x2="594" y2="34" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">validateInput(data)</text>
</svg>"
`;

exports[`render() > renders a DoWhileNode with the condition bar at the BOTTOM 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 68" width="600" height="68">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="0" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">read next line</text>
<rect x="0" y="34" width="600" height="34" fill="#e3f2fd" stroke="#333333" stroke-width="1"/>
<text x="300" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">while more lines remain</text>
<rect x="0" y="0" width="600" height="68" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders a ForNode with the iteration label at the top 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 68" width="600" height="68">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#e3f2fd" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">for i from 1 to n</text>
<rect x="0" y="34" width="600" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="34" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">sum = sum + i</text>
<rect x="0" y="0" width="600" height="68" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders a LoopNode with no condition bar 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 50" width="600" height="50">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="16" fill="#e3f2fd" stroke="#333333" stroke-width="1"/>
<text x="300" y="8" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">loop</text>
<rect x="0" y="16" width="600" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="16" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="33" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">wait for event</text>
<rect x="0" y="0" width="600" height="50" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders a ParallelNode as a rectangle with N vertical columns 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 68" width="600" height="68">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#f3e5f5" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">parallel</text>
<rect x="0" y="34" width="300" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="34" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="150" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">download file A</text>
<line x1="300" y1="34" x2="300" y2="68" stroke="#333333" stroke-width="1"/>
<rect x="300" y="34" width="300" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="34" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="450" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">download file B</text>
<rect x="0" y="0" width="600" height="68" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders a ProcessNode as a plain filled rectangle 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 34" width="600" height="34">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">do something</text>
</svg>"
`;

exports[`render() > renders a SwitchNode as a rectangle split into N vertical columns 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 102" width="600" height="102">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#fff3e0" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">switch day</text>
<rect x="0" y="34" width="200" height="34" fill="#fff3e0" stroke="#333333" stroke-width="1"/>
<text x="100" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Monday</text>
<rect x="0" y="68" width="200" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="68" width="200" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="100" y="85" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">start report</text>
<rect x="200" y="34" width="200" height="34" fill="#fff3e0" stroke="#333333" stroke-width="1"/>
<text x="300" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Friday</text>
<rect x="200" y="68" width="200" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="200" y="68" width="200" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="85" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">send summary</text>
<rect x="400" y="34" width="200" height="34" fill="#fff3e0" stroke="#333333" stroke-width="1"/>
<text x="500" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">default</text>
<rect x="400" y="68" width="200" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="400" y="68" width="200" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="500" y="85" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">continue</text>
<rect x="0" y="0" width="600" height="102" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders a WhileNode with the condition bar at the TOP 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 68" width="600" height="68">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#e3f2fd" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">while queue is not empty</text>
<rect x="0" y="34" width="600" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="34" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">process item</text>
<rect x="0" y="0" width="600" height="68" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders an IfNode with a diagonal condition bar 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 82" width="600" height="82">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="48" fill="#fff3e0" stroke="none" stroke-width="1"/>
<line x1="0" y1="0" x2="300" y2="48" stroke="#333333" stroke-width="1"/>
<line x1="600" y1="0" x2="300" y2="48" stroke="#333333" stroke-width="1"/>
<text x="300" y="16" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">x &gt; 0</text>
<text x="100" y="32" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Y</text>
<text x="500" y="32" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">N</text>
<rect x="0" y="48" width="300" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="48" width="300" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="48" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="150" y="65" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">positive path</text>
<rect x="300" y="48" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="450" y="65" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">non-positive path</text>
<rect x="0" y="0" width="600" height="82" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`render() > renders else-if chains by extending the condition split 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 130" width="600" height="130">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="48" fill="#fff3e0" stroke="none" stroke-width="1"/>
<line x1="0" y1="0" x2="300" y2="48" stroke="#333333" stroke-width="1"/>
<line x1="600" y1="0" x2="300" y2="48" stroke="#333333" stroke-width="1"/>
<text x="300" y="16" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">x &gt; 0</text>
<text x="100" y="32" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Y</text>
<text x="500" y="32" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">N</text>
<rect x="0" y="48" width="300" height="82" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="48" width="300" height="82" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="48" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="150" y="65" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">positive</text>
<rect x="300" y="48" width="300" height="48" fill="#fff3e0" stroke="none" stroke-width="1"/>
<line x1="300" y1="48" x2="450" y2="96" stroke="#333333" stroke-width="1"/>
<line x1="600" y1="48" x2="450" y2="96" stroke="#333333" stroke-width="1"/>
<text x="450" y="64" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">x === 0</text>
<text x="350" y="80" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Y</text>
<text x="550" y="80" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">N</text>
<rect x="300" y="96" width="150" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="450" y="96" width="150" height="34" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="96" width="150" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="375" y="113" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">zero</text>
<rect x="450" y="96" width="150" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="525" y="113" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">negative</text>
<rect x="300" y="48" width="300" height="82" fill="none" stroke="#333333" stroke-width="1"/>
<rect x="0" y="0" width="600" height="130" fill="none" stroke="#333333" stroke-width="1"/>
</svg>"
`;

exports[`struktToSvg() > parses and renders a complete Strukt source string in one call 1`] = `
"<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 386" width="600" height="386">
<rect width="100%" height="100%" fill="#ffffff"/>
<rect x="0" y="0" width="600" height="34" fill="#fff3e0" stroke="#333333" stroke-width="1"/>
<text x="300" y="17" text-anchor="middle" dominant-baseline="central" font-family="monospace" font-size="16" font-weight="bold" fill="#222222">Binary Search</text>
<rect x="0" y="34" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="51" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">set low to 0</text>
<rect x="0" y="68" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="85" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">set high to length of array - 1</text>
<rect x="0" y="102" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="119" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">set result to -1</text>
<rect x="0" y="136" width="600" height="34" fill="#e3f2fd" stroke="#333333" stroke-width="1"/>
<text x="300" y="153" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">while low &lt;= high</text>
<rect x="0" y="170" width="600" height="182" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="170" width="600" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="300" y="187" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">set mid to floor((low + high) / 2)</text>
<rect x="0" y="204" width="600" height="48" fill="#fff3e0" stroke="none" stroke-width="1"/>
<line x1="0" y1="204" x2="300" y2="252" stroke="#333333" stroke-width="1"/>
<line x1="600" y1="204" x2="300" y2="252" stroke="#333333" stroke-width="1"/>
<text x="300" y="220" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">array[mid] == target</text>
<text x="100" y="236" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Y</text>
<text x="500" y="236" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">N</text>
<rect x="0" y="252" width="300" height="100" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="252" width="300" height="100" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="0" y="252" width="300" height="34" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text x="150" y="269" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">set result to mid</text>
<polygon points="0,286 300,286 300,310 290,320 10,320 0,310" fill="#fce4ec" stroke="#333333" stroke-width="1"/>
<text x="150" y="303" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">break</text>
<rect x="300" y="252" width="300" height="48" fill="#fff3e0" stroke="none" stroke-width="1"/>
<line x1="300" y1="252" x2="450" y2="300" stroke="#333333" stroke-width="1"/>
<line x1="600" y1="252" x2="450" y2="300" stroke="#333333" stroke-width="1"/>
<text x="450" y="268" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">array[mid] &lt; target</text>
<text x="350" y="284" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">Y</text>
<text x="550" y="284" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">N</text>
<rect x="300" y="300" width="150" height="52" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="450" y="300" width="150" height="52" fill="#f8f8f8" stroke="none" stroke-width="1"/>
<rect x="300" y="300" width="150" height="52" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text text-anchor="middle" font-family="monospace" font-size="14" fill="#222222"><tspan x="375" y="317" dominant-baseline="central">set low to mid</tspan><tspan x="375" y="335" dominant-baseline="central">+ 1</tspan></text>
<rect x="450" y="300" width="150" height="52" fill="#f8f8f8" stroke="#333333" stroke-width="1"/>
<text text-anchor="middle" font-family="monospace" font-size="14" fill="#222222"><tspan x="525" y="317" dominant-baseline="central">set high to mid</tspan><tspan x="525" y="335" dominant-baseline="central">- 1</tspan></text>
<rect x="300" y="252" width="300" height="100" fill="none" stroke="#333333" stroke-width="1"/>
<rect x="0" y="204" width="600" height="148" fill="none" stroke="#333333" stroke-width="1"/>
<rect x="0" y="136" width="600" height="216" fill="none" stroke="#333333" stroke-width="1"/>
<polygon points="0,352 600,352 600,376 590,386 10,386 0,376" fill="#fce4ec" stroke="#333333" stroke-width="1"/>
<text x="300" y="369" text-anchor="middle" font-family="monospace" font-size="14" fill="#222222" dominant-baseline="central">return result</text>
</svg>"
`;
